--- a/index_vue.html
+++ b/index_vue.html
@@ -59,8 +59,10 @@
       <template v-for="(rs_i,rs_r) in rows_show" track-by="$index">
         <tr id="row_{{rs_r.rowobject.attr.index}}">
           <td>{{rs_r.rowobject.attr.index}}
-            <input type="checkbox" :value="rs_r.rowobject.attr.index" v-model="rs_r.rowobject.attr.editing" @click="changeediting" :disabled="!rs_r.rowobject.attr.canselect"}} />
-            {{rs_r.rowobject.attr.editing}}
+            <input type="checkbox" :value="rs_r.rowobject.attr.index"
+             v-bind:true-value="rs_r.rowobject.attr.index" v-bind:false-value="rs_r.rowobject.attr.index"
+             v-model="editinglist" :disabled="!rs_r.rowobject.attr.canselect"}} />
+            {{editinglist}}
           </td>
           <td>
             <input type="checkbox" :value="rs_r.rowobject.attr.index" v-model="selectlist" :disabled="!rs_r.rowobject.attr.canselect"}} />
@@ -68,7 +70,7 @@
           </td>
           <td v-for="(rin,rv) in rs_r.rowobject.value" track-by="$index">{{rin}}:{{rv}}</td>
         </tr>
-        <tr id="row_{{rs_r.rowobject.attr.index}}"  v-show="rs_r.rowobject.attr.editing">
+        <tr id="row_{{rs_r.rowobject.attr.index}}"  v-show="editinglist.indexOf(rs_r.rowobject.attr.index)!=-1">
           <td :colspan="rs_r.rowobject.value.length+10">
           <table class="table table-condensed table-striped table-bordered table-hover">
             <tr v-for="(rein,rev) in rs_r.edit" track-by="$index">
