--- a/index_rtable.html
+++ b/index_rtable.html
@@ -16,7 +16,7 @@
     </div>
     <script src="3rd/react.js"></script>
     <script src="3rd/react-dom.js"></script>
-    <script src="dev/my_table.js" ></script>
+    <script src="dist/yxs.js" ></script>
     
   </body>
 </html>
